# PoseGuide

./: .gitignore  CONTRIBUTING.md  README.md  ai_solution.py  apply-bounty-47.ps1  bounty-47-complete.patch  bounty-52-desk-standup-stretch.patch  pyproject.toml
.github/workflows/: ci.yml
data/poses/: README.md  arms_crossed.json  arms_crossed_power.json  arms_raised.json  back_to_camera.json  backpack_turn.json  beach_walk_side_profile.json  bike_lean.json  book_reading.json  chin_rest.json  classic_at_ease.json  coffee_cup.json  coffee_table_lean.json  contrapposto.json  couple_walk_holding_hands.json  couple_walk_holding_hands_left.json  couple_walk_holding_hands_right.json  cross_arms_stand.json  crouch_ready.json  crouch_street_photo.json  crouch_tie_shoe.json  desk_standup_stretch.json  hand_on_chin.json  hand_wave.json  hands_behind_back.json  hands_clasped_front.json  hands_in_pockets.json  hands_on_hips.json  hands_on_hips_hero.json  hat_tip.json  jump_midair.json  jump_midair_arms_open.json  kneel_profile.json  kneel_propose.json  kneeling_propose_style.json  laptop_desk.json  lean_forward.json  lean_forward_desk.json  lean_on_rail.json  lean_wall_casual.json  (+49 more)
data/samples/: obs_night_city_lean_against_rail.json  subject_contrapposto.json  subject_hands_in_pockets.json  subject_looking_away.json  subject_power_stance.json
data/scenes/: beach_sunset.json  cafe_window.json  cafe_window_counter.json  city_balcony.json  festival_crowd.json  forest_mountain_stream.json  forest_path.json  garden_path.json  garden_proposal.json  harbor_pier.json  home_window.json  indoor_loft.json  lakeside_dock.json  library_nook.json  market_day.json  mountain_summit.json  mountain_trail.json  neon_alley.json  office_lobby.json  outdoor_scenes_pack.json  park_picnic.json  rooftop_night.json  sports_field.json  street_crossing.json  studio_gray.json  subway_platform.json  urban_sunset_rooftop.json  urban_wall.json  yoga_studio_morning.json
docs/: BOUNTY.md  CONTRIBUTE_POSE_PACK.md  DIFFICULTY_GUIDE.md  DIFFICULTY_LEVELS_GUIDE.md  POSES.md  ROADMAP.md
docs/diagrams/: architecture.html  workflow.html
poses/: data.js  data.py
scripts/: build-web-catalog.py  create-bounties.mjs
tests/: test_bounty_sweep.py  test_cli.py  test_composition.py  test_difficulty.py  test_eval.py  test_export.py  test_extract.py  test_guide.py  test_indoor_scene_pack.py  test_loader.py  test_overlay.py  test_scene_tagger.py  test_schema.py  test_svg.py  test_svg_render.py  test_train.py  test_web_demo.py
web/: README.md  app.js  index.html  pose-detail-panel.css  pose-detail-panel.js  styles.css
(+34 files in other folders)
