[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poseguide"
version = "0.2.56"
description = "Pose guidance training: recommend photography poses for backgrounds and standing shots"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MergeOS / ThanhTrucSolutions" }]
keywords = ["pose", "photography", "guidance", "mediapipe", "ml", "standing-pose"]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # Pin major.minor so format rules stay stable across CI/local (ruff>=0.4 floats to latest).
  "ruff>=0.15.7,<0.16",
]
torch = [
  "torch>=2.2",
]
vision = [
  "opencv-python-headless>=4.9",
  "mediapipe>=0.10",
  "Pillow>=10.0",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
poseguide = "poseguide.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

# Default lint rules only (E4/E7/E9/F). Do not expand without formatting the tree first.
# Pin ruff in [project.optional-dependencies] so CI and local share the same formatter.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
fail_under = 30
